--- a/Learninator/Learninator/Properties/launchSettings.json
+++ b/Learninator/Learninator/Properties/launchSettings.json
@@ -22,6 +22,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "DotnetWatch": {
+      "commandName": "Executable",
+      "executablePath": "dotnet watch run",
+      "workingDirectory": "G:\\Source\\HobbyProjects\\Learninator\\Learninator\\Learninator"
     }
   }
 }
