Can now handle inputs of duplicate tags by taking distinct

--- a/Learninator/Learninator/Learninator.csproj
+++ b/Learninator/Learninator/Learninator.csproj
@@ -17,4 +17,9 @@
     <Folder Include="Database\Migrations\" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\Learninator.Library\Learninator.Library.csproj" />
+  </ItemGroup>
+
 </Project>
